packages/brain/tests/fixtures/errors/shell.ts
export const shellCommandNotFound = `bash: docker-compose: command not found`;

export const shellPermissionDenied = `bash: ./deploy.sh: Permission denied`;

export const npmError = `npm ERR! code ERESOLVE
npm ERR! ERESOLVE unable to resolve dependency tree
npm ERR!
npm ERR! While resolving: my-app@1.0.0
npm ERR! Found: react@18.2.0
npm ERR! node_modules/react
npm ERR!   react@"^18.2.0" from the root project`;

export const buildFailed = `BUILD FAILED in 2.3s
Error: Module build failed (from ./node_modules/ts-loader/index.js):
Error: TypeScript compilation failed`;
